// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<div
  className="pr-block-rich-text  __block-05967377695466767"
  id=""
>
  <h1
    id="title"
  >
    Title
  </h1>
  

  <h2
    id="subtitle"
  >
    Subtitle
  </h2>
  

  <p>
    Some content with 
    <a>
      HTML
    </a>
  </p>
  

</div>
`;

exports[`should render without crashing 1`] = `
<div
  className="pr-block-rich-text  __block-08857382246763497"
  id=""
>
  <div>
    <a
      div=""
    />
  </div>
</div>
`;

exports[`should render without markdown 1`] = `
<div
  className="pr-block-rich-text  __block-07328306950474579"
  id=""
>
  hello world
</div>
`;
